syntax = "proto3";

option csharp_namespace = "GrpcReverse";

package reverse;

service Reverse {
	rpc ReverseString (StringRequest) returns (StringResponse);
}

message StringRequest {
	string to_reverse = 1;
}

message StringResponse {
	string reversed_string = 1;
}